--- a/docker_mysql/docker-compose.yml
+++ b/docker_mysql/docker-compose.yml
@@ -1,31 +1,24 @@
-# Creation date : 22.08.2022
-# Created by : CSR
-# Description : Create two containers (one for the db and the other one of the administration front-end)
-#
-version: "3.3"
-
 services:
-  db:
+  db_flashcards:
     image: mysql:8.0.30
-    container_name: db
+    container_name: db_flashcards
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_USER: db_user
       MYSQL_PASSWORD: db_user_pass
-      MYSQL_DATABASE: p_flashcards
+      MYSQL_DATABASE: db_flashcards
     restart: always
     ports:
       - "6033:3306"
     volumes:
       - dbdata:/var/lib/mysql
-      - ./scripts:/scripts
   phpmyadmin:
     image: phpmyadmin:5.2.0
-    container_name: pma
+    container_name: pma_flashcards
     links:
-      - db
+      - db_flashcards
     environment:
-      PMA_HOST: db
+      PMA_HOST: db_flashcards
       PMA_PORT: 3306
       PMA_ARBITRARY: 1
     restart: always
